      Jonathan Nieder for providing the patch (Closes: #619123).
  * debian/patches/:
    - Removed ipvs_h_include.dpatch -- applied upstream.
  * debian/rules:
    - Use dpkg-buildflags to determine compiler/linker flags; this also
      enables hardening build flags; thanks to Moritz Muehlenhoff for
      providing the patch (Closes: #656271).
  * debian/README.Debian:
    - Added section 'Cleanup of old data' explaining how to get rid of
      out-dated data files (e.g. RRD files).

 -- Sebastian Harl <tokkee@debian.org>  Thu, 17 May 2012 15:55:39 +0200

collectd (4.10.4-1) unstable; urgency=low

  * New upstream release.
    - Added support for Yajl version 2; thanks to John Stamp for reporting
      this (Closes: #653879).
    - collectd.conf(5) now documents the "Globals" config option and that this
      is required for the "perl" and "python" plugins; thanks to Jeff Green
      for reporting this (Closes: #612784).
    - Be more verbose about why loading a plugin fails; thanks to Martin
      Steigerwald for reporting this (Closes: #585975).
    - Don't abort if including a config file fails; thanks to Reinhard Tartler
      for reporting this (Closes: #592880).
    - Fixed FTBFS with GCC 4.6; thanks to Matthias Klose for reporting this
      and Peter Green and Colin Watson for providing patches
      (Closes: #625323).
    - Added support for libnotify 0.7; thanks to Michael Biebl for reporting
      this (Closes: #636818).
    - Fixed FTBFS with current libiptc; thanks to Lucas Nussbaum for reporting
      this (Closes: #614439).
  * debian/patches:
    - Removed bts595756-notify_email-segfault -- included upstream.
    - Removed bts592623-curl_json-file -- included upstream.
    - Removed bts596128-reheap-fix -- included upstream.
    - Removed CVE-2010-4336 -- included upstream.
  * debian/rules:
    - Append DEB_BUILD_ARCH to JAVA_HOME; this is how it's done in the OpenJDK
      package.